--- a/public/components/home/view.html
+++ b/public/components/home/view.html
@@ -1,7 +1,7 @@
 <div data-role="view" data-title="Home"  data-layout="main-nonav" data-model="app.home" data-show="app.home.onShow" data-after-show="app.home.afterShow" id="homeScreen" class="screen">
     <header class="header">
         <span class="header-logo">
-            Walmart <img src="Material/images/walmartlogo.png" style="display:inline;width:1.5em;height:1.5em;"/> SPARK 2.0
+            SPARK 2.0
         </span>
     </header>
     <div class="content">
